@@ -13,6 +13,7 @@
 - Fixed incorrect Circle bounding box dimensions
 - Fixed dependency injection validating injection too early
 - Fixed typing text animation cutting off last character
+- Fixed unnecessary Image render node layouts when setting same value for texture path
 - (#53) Increased code coverage on Rectangle and Circle
 
 [1.6.5]
